Microservices and API gateaway

--- a/FrontEnd/javascript.html
+++ b/FrontEnd/javascript.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <script src="helloworld.js"></script>
+    <script src="restparameters.js"></script>
        
 </body>
 </html>       
